@@ -10,7 +10,6 @@ return [
     'run-error'          => 'RTE',
     'timelimit'          => 'TLE',
     'wrong-answer'       => 'WA',
-    'presentation-error' => 'PE', /* dropped since 5.0 */
     'no-output'          => 'NO',
     'correct'            => 'AC',
 ];
